deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: websubhash/nginxtest:landingclient3
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: nginximage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-httpd
spec:
  selector:
      app: httpd
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
      app: nginx
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 9376
  type: NodePort
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: example-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - host: nginx.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
    - host: nginx.mylocal.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-httpd
                port:
                  number: 80
